# image_to_pixcel

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/src/: main.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: TheWelcome.vue
frontend/src/router/: index.ts
frontend/src/views/: AboutView.vue  ConvertImageView.vue  HomeView.vue  HowToUseView.vue
