[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["nobu0603 <nobking.63@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
python-multipart = "^0.0.9"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
